[gd_scene load_steps=6 format=3 uid="uid://btx2g2jcyl211"]

[ext_resource type="Script" path="res://campaign_map/recruitment/recruitment.gd" id="1_qo7pv"]
[ext_resource type="Theme" uid="uid://c4lkfm562pmc7" path="res://resources/themes/StandardTheme.tres" id="2_p00dm"]
[ext_resource type="PackedScene" uid="uid://b1ji0ny03ko81" path="res://unit drafting/Unit_Commander Draft/unit_draft_controls.tscn" id="4_n6x6m"]

[sub_resource type="Theme" id="Theme_epjme"]
default_font_size = 36

[sub_resource type="Theme" id="Theme_iq8s5"]
default_font_size = 36

[node name="Recruitment" type="Control"]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qo7pv")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = ExtResource("2_p00dm")
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 36
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 25

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
modulate = Color(0.509804, 0.509804, 0.509804, 1)
self_modulate = Color(0.509804, 0.509804, 0.509804, 1)
custom_minimum_size = Vector2(1150, 36)
layout_mode = 2
theme = SubResource("Theme_epjme")

[node name="PickAmountLabel" type="Label" parent="MarginContainer/MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Pick 1 of 1"
horizontal_alignment = 2

[node name="HeaderPanel" type="Panel" parent="MarginContainer/MainContainer"]
custom_minimum_size = Vector2(830, 78)
layout_mode = 2
theme = ExtResource("2_p00dm")

[node name="HeaderLabel" type="Label" parent="MarginContainer/MainContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_iq8s5")
text = "Recruit a Unit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnitDraftControls" parent="MarginContainer" instance=ExtResource("4_n6x6m")]
z_index = -1
layout_mode = 2
size_flags_vertical = 8

[node name="LeaveButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("2_p00dm")
text = "Leave"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MainContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(1150, 355)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[connection signal="pressed" from="MarginContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
